# BOT_WEBULL

./: .env  .env.example  README.md  poetry.toml  pyproject.toml  screen_now.ps1
.github/workflows/: check-push.yml
configs/: config.yaml  symbols.yml  universe_russell2000.csv  universe_russell_smallcap100.csv
data/bars/: bars_1m_20250823.csv  bars_1m_20250823.parquet  bars_1m_20250824.csv  bars_1m_20250824.parquet  bars_1m_20250825.csv  bars_1m_20250825.parquet  bars_1m_20250826.csv  bars_1m_20250826.parquet  bars_1m_20250830.csv  bars_1m_20250901.parquet  bars_1m_20250905.csv  bars_1m_20250905.parquet  bars_1m_20250909.csv  bars_1m_20250909.parquet  indicators_20250824.parquet  indicators_20250826.csv  indicators_20250830.parquet  indicators_20250901.csv  indicators_20250905.csv  indicators_20250905.parquet  indicators_20250909.csv  indicators_20250909.parquet
data/eod/: _io_smoketest.csv  _io_smoketest.parquet  eod_features_20250829.csv  eod_features_20250901.parquet  eod_features_20250912.parquet  watchlist_A.json  watchlist_B.json
data/logs/: executions.csv  kpi_daily.csv  kpi_daily1.csv  strategy.csv
data/signals/: 20250908__A_AAPL_112904.json  20250908__A_NVDA_112904.json  20250908__A_TSLA_112904.json  20250909__A_AAPL_033733.json  20250909__A_NVDA_033733.json  20250909__A_TSLA_033733.json
data/signals/cancelled/: 20250824__A_AAPL_213017.json  20250824__A_AMD_200458.json  20250824__A_NVDA_200458.json  20250824__A_TSLA_200458.json
data/stream/: bars_20250823.ndjson  bars_20250824.ndjson  bars_20250825.ndjson  bars_20250826.ndjson  bars_20250828.ndjson  bars_20250829.ndjson  bars_20250830.ndjson
scripts/: _debug_rules.py  build_manual_watchlist.py  cancel_unfilled.py  close_positions.py  compute_indicators.py  daily_kpi.py  export_universe_csv.py  make_stub_bars.py  nightly_screen.py  place_orders.py  register_tasks.ps1  run_all.ps1  run_signals.py  ws_run.py
src/rh_pdc_daytrade/: __init__.py
src/rh_pdc_daytrade/utils/: io.py  (+5 more)
(+17 files in other folders)
