[tool.poetry]
name = "bot-webull"
version = "0.1.0"
description = ""
authors = ["Yoshi <yoshiyoshi@example.com>"]
readme = "README.md"
packages = [{ include = "rh_pdc_daytrade", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7"
numpy = "^2.3.2"
pandas = "^2.3.2"
pyarrow = "^21.0.0"
orjson = "^3.11.3"
pyyaml = "^6.0"
requests = "^2.32"
tenacity = "^8.3"
websockets = "^12.0"
fastparquet = "^2024.5.0"
click = "^8.1"
tzdata = "^2024.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
